--- a/conf/test.config
+++ b/conf/test.config
@@ -20,6 +20,6 @@ params {
     max_time   = '6.h'
 
     // Input data
-    input  = params.pipelines_testdata_base_path + 'viralrecon/samplesheet/samplesheet_test_illumina_amplicon.csv'
+    input  = { params.pipelines_testdata_base_path + 'viralrecon/samplesheet/samplesheet_test_illumina_amplicon.csv' }
 
 }
