Fix sync errors

--- a/nextflow.config
+++ b/nextflow.config
@@ -164,7 +164,7 @@ profiles {
 includeConfig !System.getenv('NXF_OFFLINE') && params.custom_config_base ? "${params.custom_config_base}/nfcore_custom.config" : "/dev/null"
 
 // Load nf-core/demo custom profiles from different institutions.
-// TODO nf-core: Optionally, you can add a pipeline-specific nf-core config at https://github.com/nf-core/configs
+// nf-core: Optionally, you can add a pipeline-specific nf-core config at https://github.com/nf-core/configs
 // includeConfig !System.getenv('NXF_OFFLINE') && params.custom_config_base ? "${params.custom_config_base}/pipeline/demo.config" : "/dev/null"
 
 // Set default registry for Apptainer, Docker, Podman, Charliecloud and Singularity independent of -profile
@@ -227,15 +227,9 @@ manifest {
     homePage        = 'https://github.com/nf-core/demo'
     description     = """An nf-core demo pipeline"""
     mainScript      = 'main.nf'
-<<<<<<< HEAD
-    nextflowVersion = '!>=23.04.0'
-    version         = '1.0.0'
-    doi             = '10.5281/zenodo.12192442'
-=======
     nextflowVersion = '!>=24.04.2'
     version         = '1.0.0'
-    doi             = ''
->>>>>>> TEMPLATE
+    doi             = '10.5281/zenodo.12192442'
 }
 
 // Nextflow plugins
